--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -108,10 +108,10 @@ body {
 
   & button {
     all: unset;
-    display: block; 
+    display: block;
     width: 100%;
     height: 100%;
-    cursor: pointer; 
+    cursor: pointer;
     text-align: center;
   }
 
@@ -140,7 +140,7 @@ body {
     border: 1px solid #3e3c41;
     border-radius: 0.5rem;
     display: flex;
-    width: 10.75rem;
+    width: 12.75rem;
     padding: 0.75rem;
     height: 3rem;
     gap: 0.5rem;
@@ -151,9 +151,22 @@ body {
       height: 1.25rem;
     }
 
-    & p {
+    & input {
+      all: unset;
+      width: 6.25rem;
+      appearance: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;
       font: 400 1rem var(--ff-inter);
       color: var(--content-secondary);
+    }
+
+    & input::-webkit-calendar-picker-indicator {
+      display: none;
+    }
+
+    & img {
+      cursor: pointer;
     }
   }
 
@@ -207,7 +220,9 @@ body {
     }
   }
 
-  & .clients-morning {
+  & .clients-morning,
+  .clients-afternoon,
+  .clients-night {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -240,6 +255,10 @@ body {
       & .remove-item {
         font: var(--paragraph-sm);
         color: var(--content-tertiary);
+        cursor: pointer;
+      }
+      & .remove-item:hover {
+        color: var(--bg-highlights);
       }
     }
     & .item-morning > * {
@@ -418,10 +437,10 @@ body {
 
     & button {
       all: unset;
-      display: block; 
+      display: block;
       width: 100%;
       height: 100%;
-      cursor: pointer; 
+      cursor: pointer;
       text-align: center;
     }
 
